--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,5 +5,7 @@
 @import "ex4.scss";
 @import "ex5.scss";
 @import "ex6.scss";
+@import "ex7.scss";
 
+@import "../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
